--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.10,<3.12"
 dependencies = [
     "astro-datalab (>=2.24.0,<3.0.0)",
-    "sparclclient (>=1.2.5,<2.0.0)"
+    "sparclclient (>=1.2.5,<2.0.0)",
+    "notebook (>=7.4.5,<8.0.0)",
+    "ipykernel (>=6.30.1,<7.0.0)"
 ]
 
 
