--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ dependencies = [
     "astro-datalab (>=2.24.0,<3.0.0)",
     "sparclclient (>=1.2.5,<2.0.0)",
     "notebook (>=7.4.5,<8.0.0)",
-    "ipykernel (>=6.30.1,<7.0.0)"
+    "ipykernel (>=6.30.1,<7.0.0)",
+    "pyarrow (>=21.0.0,<22.0.0)"
 ]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -21,3 +21,12 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 package-mode = false
+
+[tool.poetry]
+name = "utils"
+version = "0.1.0"
+description = ""
+authors = ["Kelly Heckler <ke.heckler95@gmail.com>"]
+packages = [
+    { include = "utils", from = "src" }
+]
